# wordpress-ecs-rds-cdk

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.devcontainer/docker-in-docker/: devcontainer.json
.devcontainer/docker-outside-of-docker/: devcontainer.json
.github/workflows/: cloudpod_release.yml  integration-test.yml  sync.yml  test_cloudpods.yml
deployments/cdk/: app.py  cdk.json  env.py  wordpress.py
tests/: test_integration.py
