[metadata]
name = wordpress-ecs-rds-cdk
version = 0.1.0
url = https://github.com/localstack-samples/wordpress-ecs-rds-cdk
author = LocalStack Contributors
author_email = info@localstack.cloud
description = Wordpress deployed using ECS and RDS
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
test_suite = tests
packages=find:

[options.packages.find]
exclude =
    tests
    lambdas
    deployments

[options.extras_require]
dev =
    black==22.3.0
    flake8>=3.6.0
    flake8-black==0.3.2
    flake8-isort>=4.0.0
    flake8-quotes>=0.11.0
    pre-commit==2.13.0
    pyproject-flake8
    isort==5.9.1
    pytest>=7.0
    awscli
    awscli-local
    %(deploy)s

deploy =
    aws-cdk-lib==2.139.1
    constructs>=10.0.0,<11.0.0

[options.package_data]
* = *.md
